// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Roles Tests addUserRole by Id succeeds 1`] = `
Array [
  Object {
    "canBeDeleted": true,
    "createdBy": null,
    "description": "role 3",
    "modifiedBy": null,
    "roleName": "role3",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": true,
    "createdBy": null,
    "description": "changed description",
    "modifiedBy": null,
    "roleName": "role1",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
]
`;

exports[`Roles Tests listRoles succeeds 1`] = `
Array [
  Object {
    "canBeDeleted": false,
    "createdBy": null,
    "description": "root superuser",
    "modifiedBy": null,
    "roleName": "superuser",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": false,
    "createdBy": null,
    "description": "admin user",
    "modifiedBy": null,
    "roleName": "admin",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": false,
    "createdBy": null,
    "description": "user",
    "modifiedBy": null,
    "roleName": "user",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": true,
    "createdBy": null,
    "description": "role 1",
    "modifiedBy": null,
    "roleName": "role1",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": true,
    "createdBy": null,
    "description": "role 2",
    "modifiedBy": null,
    "roleName": "role2",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
  Object {
    "canBeDeleted": true,
    "createdBy": null,
    "description": "role 3",
    "modifiedBy": null,
    "roleName": "role3",
    "tenantId": "00000000-0000-0000-0000-000000000000",
  },
]
`;

exports[`Roles Tests listUserPermissions succeeds 1`] = `Array []`;

exports[`Roles Tests listUserPermissions succeeds 2`] = `Array []`;

exports[`Roles Tests removeRole succeeds 1`] = `5`;
